<resources>

    <string name="app_name">FindMyContacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_find_my_contacts">FindMyContactsActivity</string>
    <string name="terms_label">Terms &amp; Conditions</string>
    <string name="help_label">Aide</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Mot de passe</string>
    <string name="validate_label">Valider</string>
    <string name="error_hint">Message d\'erreur</string>
    <string name="infos_description_label">Informations</string>
    <string name="logo_description_label">Logo</string>
    <color name="red_color">#F00</color>
    <string name="nom_prenom">NOM Prenom</string>
    <string name="departement">Departement</string>
    <string name="modifier_photo">Modifier photo</string>
    <string name="editer_profil">Editer profil</string>
    <string name="map_view">MapView</string>
    <string name="photo_profil">Photo profil</string>
    <string name="menu_appeler">Appeler</string>
    <string name="menu_mail">Envoyer un mail</string>
    <string name="menu_sms">Envoyer un SMS</string>
    <string name="menu_imprimer_profil">Imprimer profil</string>
    <string name="menu_profil_bluetooth">Envoyer profil via Bluetooth</string>
    <string name="menu_supprimer_profil">Supprimer le profil</string>
    <string name="menu_ajouter_contacts">Ajouter à mes contacts</string>
    <string name="message_erreur">Message d\'erreur</string>
    <string name="menu_rapport">Rapport</string>
    <string name="menu_rechercher">Rechercher</string>
    <string name="menu_ajouter">Ajouter</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="adresse">Adresse</string>
    <string name="ville">Ville</string>
    <string name="code_postal">Code postal</string>
    <string name="pays">Pays</string>
    <string name="telephone">Telephone</string>
    <string name="geolocalisation">Geolocalisation</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="creer">Creer</string>
    <string name="menu_imprimer">Imprimer</string>
    <string name="criteres_recherche">Criteres de recherche</string>
    <string name="DescPhotoContact">photo du contact</string>
    <string name="desc_photo_contact">Photo du contact</string>
    <string name="menu_deconnexion">Deconnexion</string>
    <string name="titre_boite_dialogue_ajout_contacts">Options d\'ajout de contact</string>
    <string-array name="options_ajout_contacts">
        <item >Manuel</item>
        <item >Depuis mes contacts</item>
    </string-array>
    <string name="menu_ajouter_a_mes_contacts">Ajouter à mes contacts</string>
    <string name="deconnexion">Se déconnecter ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="annuler">Annuler</string>
    <string name="preferences">Preferences</string>
    <string name="nom_rue">Nom Rue</string>
    <string name="num_rue">N° Rue</string>
    <string name="email">Email</string>
    

</resources>