<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_ajouter"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_ajouter"
        android:showAsAction="always" />
    <item android:id="@+id/menu_rechercher_contacts" 
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_rechercher"
        android:showAsAction="always"/>
    <item android:id="@+id/menu_rapport"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_rapport"
        android:showAsAction="always"/>
    <item android:id="@+id/menu_deconnexion"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_deconnexion"
        android:showAsAction="always"/>
</menu>
