<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvErreurAjoutContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/red_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/tfNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nom"
                    android:inputType="textCapCharacters|textPersonName"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/tfPrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/prenom"
                    android:inputType="textCapWords|textPersonName"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/tfDateNaissance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date_naissance"
                    android:inputType="text|datetime|date|time"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/tfNumRue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/num_rue"
                    android:inputType="number"
                    android:singleLine="true"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/tfNomRue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nom_rue"
                    android:inputType="textCapWords|textPostalAddress"
                    android:singleLine="true"
                    android:visibility="gone" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/tfCodePostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/code_postal"
                    android:inputType="number"
                    android:singleLine="true"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/tfVille"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ville"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/tfPays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pays"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/tfTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/tfEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvGeolocalisation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/geolocalisation" />

                <ToggleButton
                    android:id="@+id/togBtnGeolocalisation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_button" />
            </LinearLayout>

            <Button
                android:id="@+id/btnValiderContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creer" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>