<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp" >

        <QuickContactBadge
            android:id="@+id/quickBadgeContactUtilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/tvNomPrenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nom_prenom"
                android:paddingTop="10dp" />
            
            <TextView
                android:id="@+id/tvDepartement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/departement"
                android:paddingTop="10dp" />
            
            <TextView
                android:id="@+id/tvAdresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/adresse"
                android:paddingTop="10dp" />
            
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="356dp"
        android:gravity="center" >
        
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:contentDescription="@string/map_view"
            android:src="@android:drawable/gallery_thumb" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button
            android:id="@+id/btnModifPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modifier_photo" />
        
        <Button
            android:id="@+id/btnEditProfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editer_profil" />
    </LinearLayout>
</LinearLayout>